-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 21
-
Component/s: hotspot
-
b10
-
generic
Client build fails after JDK-8300255.
In my local test, it fails on both x86 and aarch64.
Configure: "--with-debug-level=release --with-jvm-variants=client "
====================================================
The existing configuration has been successfully updated in
/tmp/build-release
using configure arguments '--with-boot-jdk=~/boot-jdk/aarch64/master --with-debug-level=release --with-version-opt=git-13b1ebba2 --with-jvm-variants=client --with-gtest=~/googletest-1.13.0'.
Configuration summary:
* Name: tmp/build-release
* Debug level: release
* HS debug level: product
* JVM variants: client
* JVM features: client: 'cds compiler1 epsilongc g1gc jfr jni-check jvmti management parallelgc serialgc services shenandoahgc vm-structs zgc'
* OpenJDK target: OS: linux, CPU architecture: aarch64, address length: 64
* Version string: 21-internal-git-13b1ebba2 (21-internal)
* Source date: 1676342730 (2023-02-14T02:45:30Z)
Tools summary:
* Boot JDK: openjdk version "20-internal" 2023-03-21 OpenJDK Runtime Environment (build 20-internal-git-a07975bf3) OpenJDK 64-Bit Server VM (build 20-internal-git-a07975bf3, mixed mode) (at ~/boot-jdk/aarch64/master)
* Toolchain: gcc (GNU Compiler Collection)
* C Compiler: Version 11.2.0 (at /usr/bin/gcc)
* C++ Compiler: Version 11.2.0 (at /usr/bin/g++)
Build performance summary:
* Build jobs: 160
* Memory limit: 256020 MB
Error log:
====================================================
=== Output from failing command(s) repeated here ===
* For target hotspot_variant-client_libjvm_objs_zBarrierSetAssembler_aarch64.o:
~/jdk_src/src/hotspot/cpu/aarch64/gc/z/zBarrierSetAssembler_aarch64.cpp:451: error: "__" redefined [-Werror]
451 | #define __ masm->
|
~/jdk_src/src/hotspot/cpu/aarch64/gc/z/zBarrierSetAssembler_aarch64.cpp:276: note: this is the location of the previous definition
276 | #define __ sasm->
|
cc1plus: all warnings being treated as errors
* All command lines available in ~/build-release/make-support/failure-logs.
=== End of repeated output ===
In my local test, it fails on both x86 and aarch64.
Configure: "--with-debug-level=release --with-jvm-variants=client "
====================================================
The existing configuration has been successfully updated in
/tmp/build-release
using configure arguments '--with-boot-jdk=~/boot-jdk/aarch64/master --with-debug-level=release --with-version-opt=git-13b1ebba2 --with-jvm-variants=client --with-gtest=~/googletest-1.13.0'.
Configuration summary:
* Name: tmp/build-release
* Debug level: release
* HS debug level: product
* JVM variants: client
* JVM features: client: 'cds compiler1 epsilongc g1gc jfr jni-check jvmti management parallelgc serialgc services shenandoahgc vm-structs zgc'
* OpenJDK target: OS: linux, CPU architecture: aarch64, address length: 64
* Version string: 21-internal-git-13b1ebba2 (21-internal)
* Source date: 1676342730 (2023-02-14T02:45:30Z)
Tools summary:
* Boot JDK: openjdk version "20-internal" 2023-03-21 OpenJDK Runtime Environment (build 20-internal-git-a07975bf3) OpenJDK 64-Bit Server VM (build 20-internal-git-a07975bf3, mixed mode) (at ~/boot-jdk/aarch64/master)
* Toolchain: gcc (GNU Compiler Collection)
* C Compiler: Version 11.2.0 (at /usr/bin/gcc)
* C++ Compiler: Version 11.2.0 (at /usr/bin/g++)
Build performance summary:
* Build jobs: 160
* Memory limit: 256020 MB
Error log:
====================================================
=== Output from failing command(s) repeated here ===
* For target hotspot_variant-client_libjvm_objs_zBarrierSetAssembler_aarch64.o:
~/jdk_src/src/hotspot/cpu/aarch64/gc/z/zBarrierSetAssembler_aarch64.cpp:451: error: "__" redefined [-Werror]
451 | #define __ masm->
|
~/jdk_src/src/hotspot/cpu/aarch64/gc/z/zBarrierSetAssembler_aarch64.cpp:276: note: this is the location of the previous definition
276 | #define __ sasm->
|
cc1plus: all warnings being treated as errors
* All command lines available in ~/build-release/make-support/failure-logs.
=== End of repeated output ===
- relates to
-
JDK-8300255 Introduce interface for GC oop verification in the assembler
-
- Resolved
-