8302368: [ZGC] Client build fails after JDK-8300255